--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ platformdirs==2.5.2
 psycopg2==2.9.3
 pydantic==1.9.0
 python-dateutil==1.5
+python-dateutil==3.0
 requests==2.27.1
 s3transfer==0.5.2
 six==1.16.0
